fix: update CORS configuration to allow frontend requests